tests/parsing/cmc/errors/148.expected
File "tests/parsing/cmc/errors/148.cmc", line 1, character 28-29:
1 | (check-system sys :reachable)
                                ^
Error while parsing a reachability variable definition,
      read a closing parenthesis,
      but expected an s-expression of the form `(name value)`.
